# Corexapod

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  bringup.sh  calib.param  params.in  params.info
include/: daemon.hpp  engine.h  engine.hpp  parser.hpp  power.hpp  serial.h  serial.hpp  uscengine.h  uscwrapper.hpp
sch/Corexapod-ExtensionBoard/: PCB_Project1.PrjPCB  PCB_Project1.PrjPCBStructure  PcbLib1.PcbLib  Schlib1.SchLib  board.PcbDoc  board.SchDoc
src/: actions.as  actions2.as  engine.cpp  parser.cpp  power.cpp  serial.cpp  test.cpp  testParser.cpp  uscengine.c  uscwrapper.cpp
src/app/: corexapod.cpp  uscdemo.cpp  uscwrapperdemo.c
src/frontend/: daemon.cpp
src/frontend/CorexapodWebController/: Gruntfile.js  README.md  bower.json  package.json
src/frontend/CorexapodWebController/app/: index.html
src/frontend/CorexapodWebController/app/scripts/: app.js
src/frontend/CorexapodWebController/app/scripts/controllers/: about.js  main.js
src/frontend/CorexapodWebController/app/styles/: main.css
src/frontend/CorexapodWebController/app/views/: about.html  main.html
src/frontend/CorexapodWebController/test/: karma.conf.js
src/frontend/CorexapodWebController/test/spec/controllers/: about.js  main.js
src/frontend/Server/: backend.py  web
src/frontend/Server/static/: index.html
src/frontend/Server/static/scripts/: scripts.0c1b1b7c.js  scripts.4c46b609.js  scripts.84f914b3.js  scripts.8d0e5924.js  scripts.9399f6d4.js  scripts.a3b49350.js  scripts.b2594060.js  scripts.d9472e68.js  scripts.fdb3412f.js
src/frontend/Server/static/styles/: main.625aee76.css  main.6d02065a.css  main.976f4072.css
src/frontend/Server/static/views/: about.html  main.html
